# tabular_lesion

./: .gitignore  README.md  clean_df.ipynb  confest.py  fastai_tabular.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
data/: best_estimator_cv_results_20220705-124618.csv  best_estimator_cv_results_20220705-151200.csv  best_estimator_cv_results_20220705-153557.csv  best_estimator_cv_results_20220705-162052.csv  best_estimator_cv_results_20220705-162359.csv  best_estimator_cv_results_20220705-162707.csv  best_estimator_cv_results_20220705-163113.csv  best_estimator_cv_results_20220705-163732.csv  best_estimator_cv_results_20220705-164247.csv  best_estimator_cv_results_20220705-165954.csv  best_estimator_cv_results_20220705-171117.csv  best_estimator_cv_results_20220705-172033.csv  cv_results_.csv  pipe_cv_results_.csv
models/: LogisticRegression_0.850_0.765.onnx  LogisticRegression_0.898_0.780.onnx  RidgeClassifier_20220627-221059.onnx  XGBClassifier_DecisionTreeClassifier_0.990_0.581.onnx  XGBClassifier_KNeighborsClassifier_0.770.onnx  XGBClassifier_KNeighborsClassifier_0.997_0.758.onnx  XGBClassifier_KNeighborsClassifier_1.000_0.720.onnx  pipeline_xgboost.onnx
results/: GaussianNB_selected_features_0.819_0.566_20220629-142633.csv  GaussianNB_selected_features_0.823_0.761_20220629-101625.csv  LogisticRegression_selected_features_0.839_0.736_20220628-182608.csv  LogisticRegression_selected_features_0.846_0.787_20220627-234840.csv  LogisticRegression_selected_features_0.850_0.765_20220629-204517.csv  columns_0.807_0.66.csv  (+14 more)
src/: dataset.py  (+6 more)
(+23 files in other folders)
