[metadata]
name = classifier
description = classifying approaches
author = Fabio Geraci
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.8


[options]
packages =
    classifier
install_requires =
    sklearn-genetic
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
classifier = py.typed

[flake8]
max-line-length = 160

[mypy]
# http://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = True
strict_optional = True